--- a/index.html
+++ b/index.html
@@ -12,6 +12,37 @@
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <style>
+    .course-list {
+        columns: 2;
+        -webkit-columns: 2;
+        -moz-columns: 2;
+        column-gap: 20px;
+        list-style-type: none;
+        padding: 0;
+    }
+    .course-list li {
+        padding: 2px 0;
+        display: flex;
+        justify-content: space-between;
+    }
+    .course-grade {
+        /* background-color: #f0f0f0; */
+        border-radius: 12px;
+        padding: 2px 8px;
+        color: #333;
+        margin-left: 5px;
+        min-width: 30px;
+        text-align: center;
+    }
+    .gpa {
+        margin-top: 20px;
+    }
+    .achievements {
+        margin-top: 10px;
+    }
+</style>
+
 </head>
 
 <body>
@@ -19,7 +50,7 @@
         <i class="fa fa-bars" aria-hidden="true"></i>
     </div>
     <!-- End #mobile-menu-toggle -->
-    <header>
+    <!-- <header>
         <div id="mobile-menu-close">
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
@@ -28,11 +59,12 @@
                 <a href="#about">About</a>
             </li>
             <li>
-                <a href="#experience">Experience</a>
-            </li>
-            <li>
                 <a href="#education">Education</a>
             </li>
+            <li>
+                <a href="#experience">Experience</a>
+            </li>
+
             <li>
                 <a href="#projects">Projects</a>
             </li>
@@ -43,13 +75,13 @@
                 <a href="#contact">Contact</a>
             </li>
         </ul>
-    </header>
+    </header> -->
     <!-- End header -->
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Mingyuan Li</h1>
+            <h2>placeholder</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,18 +105,55 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Placeholder
                     </p>
                 </div>
             </div>
         </div>
     </div>
     <!-- End #about -->
+    <div id="education" class="background-alt">
+        <h2 class="heading">Education</h2>
+        <div class="education-block">
+            <h3>Xi’an Jiaotong-Liverpool University</h3>
+            <span class="education-date">September 2021 – Now</span>
+            <h4>Bachelor of Information and Computing Science</h4>
+            <ul class="course-list">
+                <li><strong>Java Programming</strong><span class="course-grade">A</span></li>
+                <li><strong>Computer Systems</strong><span class="course-grade">A</span></li>
+                <li><strong>Data Structures</strong><span class="course-grade">A</span></li>
+                <li><strong>Artificial Intelligence</strong><span class="course-grade">A</span></li>
+                <li><strong>Introduction to Databases</strong><span class="course-grade">A-</span></li>
+                <li><strong>Operating Systems Concepts</strong><span class="course-grade">A</span></li>
+                <li><strong>Discrete Mathematics and Statistics</strong><span class="course-grade">A-</span></li>
+                <li><strong>Algorithmic Foundations and Problem Solving</strong><span class="course-grade">A</span></li>
+                <li><strong>Introduction to Networking</strong><span class="course-grade">A</span></li>
+                <li><strong>Software Engineering I</strong><span class="course-grade">A-</span></li>
+                <li><strong>Computer Graphics</strong><span class="course-grade">A-</span></li>
+                <li><strong>Decision Computation and Language</strong><span class="course-grade">A</span></li>
+                <li><strong>Software Engineering Group Project</strong><span class="course-grade"></span></li>
+                <li><strong>Advanced OO Programming</strong><span class="course-grade"></span></li>
+                <li><strong>Human-Centric Computing</strong><span class="course-grade"></span></li>
+                <li><strong>Complexity of Algorithms</strong><span class="course-grade"></span></li>
+                <li><strong>Linear Algebra</strong><span class="course-grade">A</span></li>
+                <li><strong>Calculus</strong><span class="course-grade">A</span></li>
+                <li><strong>Multivariable Calculus</strong><span class="course-grade">A</span></li>
+            </ul>
+            <div class="gpa">
+                <p><strong>GPA:</strong> Year 1: 3.63, Year 2: 3.82</p>
+            </div>
+            <div class="achievements">
+                <p><strong>Achievements Detail: </strong>  Ranked in the top 1.97% in Java Programming.</p>
+            </div>
+        </div>
+        <!-- End .education-block -->
 
-    <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <!-- End .education-block -->
+    </div>
+    <!-- End #education -->
+
+    <div id="experience">
+        <h2 class="heading">Research Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
                 <h3>Employer Name</h3>
@@ -113,40 +182,8 @@
     </div>
     <!-- End #experience -->
 
-    <div id="education">
-        <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
-        </div>
-        <!-- End .education-block -->
-    </div>
-    <!-- End #education -->
-
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+        <h2 class="heading">Accomplishments</h2>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
