--- a/index.html
+++ b/index.html
@@ -155,29 +155,69 @@
     <div id="experience">
         <h2 class="heading">Research Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="June 2023 – September 2023">
+                <h3> 2023 Summer Undergraduate Research Fellowship (SURF)</h3>
+                <h4>Student Fellow</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Supervisor: Erick Purwanto [Erick.Purwanto@xjtlu.edu.cn]
                 </p>
+                <!-- 数字标号列表为一级，数字标号列表下有二级列表 -->
+                <ol>
+                    <li><p><strong>Replication and Improvement of the Cervical Spine Fracture Detection Research. Publish a paper at PlatCon.</strong></p></li>
+                    <ul>
+                        <li>Using multiple pre-processing techniques such as windowing will effectively modify the image size and additionally
+                            optimize the image contrast and brightness.</li>
+                        <li>Using 3D U-Net + EfficientNet-B5 model for cervical spine segmentation. Then, using CrackNet + BiLSTM Model
+                            for Cervical Fracture Classification.</li>
+                    </ul>
+                    <li><p><strong>At the HubMAP Competition, use YOLOv8 for human blood vessel segmentation and make pseudo labels for retraining. Trying to combine SAM with YOLOv8 for segmentation.</strong></p></li>
+                    <li><p><strong>During the MedFMC, trained a few-shot model with a Swin-transformer backbone and developing patch-based preprocessing methods to enhance model performance. Publish a paper at CyberC.</strong></p></li>
+                    <ul>
+                        <li>Training a few-shot classification model using the VPT model with a backbone of Swin-transformer.</li>
+                        <li>Developed Patch-based preprocessing technique for the model, enhancing the model’s ability to detect minute details and achieving significant improvements in mAP and AUC on two datasets compared to the baseline.</li>
+                    </ul>
+                </ol>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date=" September 2023– Present">
+                <h3> TDF Project: AI-based ChatBOT in Programming Education</h3>
+                <h4> Research Assistant</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Supervisor: Erick Purwanto [Erick.Purwanto@xjtlu.edu.cn]; 
+                    Yihong Wang [Yihong.Wang@xjtlu.edu.cn]; 
+                    Thomas Selig [Thomas.Selig@xjtlu.edu.cn]
                 </p>
+                <ol>
+                    <li><p><strong> Phase One: Created a programming tutor bot based on open-source projects tailored for pair programming, winning the
+                        second prize at the XJTLU Student Research-Oriented Learning Summit</strong></p></li>
+                    <ul>
+                        <li>Utilized Prompt Engineering to call OpenAI APIs, creating an educational chatbot for programming. Implemented
+                            Chain of Thought and Moderation to prevent non-educational output, making it suitable for beginners.</li>
+                        <li>Tested the bot with an Indonesian student to verify its effectiveness and multilingual capabilities.</li>
+                    </ul>
+                    <li><p><strong>Phase Two: Developed algorithm visualization module based on bot responses to aid teaching.</strong></p></li>
+                    <ul>
+                        <li>Created seven algorithm visualizations using d3.node, including for loops and array sorting lessons. Modified
+                            previous React-based TypeScript project to enable response-driven visualizations. Developed a static website with
+                            embedded chatbot to package programming knowledge and LLM into courses.</li>
+                        <li>Conducted 2 controlled experiments with pre-A-level students and 2 controlled experiments with 120
+                            non-programming background students from the CPT206 course at XJTLU, demonstrating improved learning
+                            efficiency with the chatbot. Preparing a publication based on these findings and secured Advance HE Global Impact
+                            Grants 2023-24.</li>
+                    </ul>
+                    <li><p><strong>Phase Three: Further research on the effectiveness of our design compared to standard GPT in teaching graph
+                        algorithms.</strong></p></li>
+                    <ul>
+                        <li>Iterated three graph algorithm visualizations using d3.force, including DFS-based cycle and connectivity checks, and
+                            BFS-based connected components check. Added data recording and user-friendly guidance modules.</li>
+                        <li>Conducted 8 controlled experiments to verify its effectiveness: experiments involved 330 students with varying
+                            programming backgrounds from the CPT204 course at XJTLU. One group used our bot for the set learning tasks,
+                            while the other group used AI based on the original GPT. The results showed a significant improvement in learning
+                            efficiency for students using the chatbot. The project was showcased at EdVenture and internal sharing seminars.</li>
+                    </ul>
+                </ol>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
         </div>
     </div>
     <!-- End #experience -->
@@ -196,7 +236,7 @@
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#">View Project</a>
+                        
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -212,7 +252,7 @@
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#">View Project</a>
+                        
                     </div>
                     <!-- End .project-info -->
                 </div>
