--- a/index.html
+++ b/index.html
@@ -149,7 +149,33 @@
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
-    <div id="projects" ">
+
+    <div id="education" style="background-color: #effeff;">
+        <h2 class="heading">Publication</h2>
+
+        <div class="education-block">
+            <h3>Cervical Spine Fracture Detection Through Two-Stage Approach of Mask Segmentation and
+                Windowing Based on Convolutional Neural Network</h3>
+            <h4>Co-first author</h4>
+            <div class="gpa">
+                <p><i>International Conference on Platform Technology and Service (PlatCon), 2023</i></p>
+            </div>
+        </div>
+
+        <div class="education-block">
+            <h3>Patch-Based Multi-Level Attention Mechanism for Few-Shot Multi-Label Medical Image
+                Classification</h3>
+            <h4>Co-first author</h4>
+            <div class="gpa">
+                <p><i>The 15th International Conference on Cyber-Enabled Distributed Computing and Knowledge
+                    Discovery, 2023</i></p>
+            </div>
+        </div>
+    </div>
+    <!-- End #education -->
+
+
+    <div id="projects">
         <h2 class="heading">Accomplishments</h2>
         <div class="container">
             <div class="row">
