--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     }
 
     .zoom-image:hover {
-        transform: scale(1.2); /* 鼠标悬停时放大图片 */
+        transform: scale(1.3); /* 鼠标悬停时放大图片 */
         z-index: 10; /* 放大时提升层级，避免被其他元素覆盖 */
     }
 </style>
@@ -192,7 +192,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" class="zoom-image"/>
+                        <img src="images\MCM.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Received the Honourable Mention for MCM/ICM in 2023.</h3>
@@ -202,7 +202,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images\CyberC.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Achieved third place in the IEEE CyberC 2023 Data Analysis Competition.</h3>
@@ -212,7 +212,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images\Sypo.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Awarded second prize at the 2023 XJTLU Student Research-Oriented Learning Summit.</h3>
@@ -222,7 +222,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images\advanceHE.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Received the Global Impact Grants 2023-24 (£1000) from Advance HE.</h3>
@@ -232,7 +232,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images\CPT208.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Honored with an Honorable Mention in the CPT208 Human-Centric Computing.</h3>
@@ -242,7 +242,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images\EdVenture.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Presented project outcomes as a Guest Speaker at EdVenture: Exploring Innovative Practices in Higher Education.</h3>
