修改字体和gpa

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
         transform: scale(1.3); /* 鼠标悬停时放大图片 */
         z-index: 10; /* 放大时提升层级，避免被其他元素覆盖 */
     }
+    @font-face {
+            font-family: 'SmileySansOblique';
+            src: url('libs/SmileySans-Oblique.ttf.woff2') format('woff2');
+        }
+    .custom-font-SmileySansOblique {
+        font-family: 'SmileySansOblique', sans-serif;
+    }
+
 </style>
 
 </head>
@@ -92,7 +100,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Mingyuan Li</h1>
-            <h2>placeholder</h2>
+            <h2 class="custom-font-SmileySansOblique">霆霓快雨</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -130,31 +138,34 @@
             <span class="education-date">September 2021 – Now</span>
             <h4>Bachelor of Information and Computing Science</h4>
             <ul class="course-list">
-                <li><strong>Java Programming</strong><span class="course-grade">A</span></li>
-                <li><strong>Computer Systems</strong><span class="course-grade">A</span></li>
-                <li><strong>Data Structures</strong><span class="course-grade">A</span></li>
-                <li><strong>Artificial Intelligence</strong><span class="course-grade">A</span></li>
-                <li><strong>Introduction to Databases</strong><span class="course-grade">A-</span></li>
-                <li><strong>Operating Systems Concepts</strong><span class="course-grade">A</span></li>
-                <li><strong>Discrete Mathematics and Statistics</strong><span class="course-grade">A-</span></li>
-                <li><strong>Algorithmic Foundations and Problem Solving</strong><span class="course-grade">A</span></li>
-                <li><strong>Introduction to Networking</strong><span class="course-grade">A</span></li>
-                <li><strong>Software Engineering I</strong><span class="course-grade">A-</span></li>
-                <li><strong>Computer Graphics</strong><span class="course-grade">A-</span></li>
-                <li><strong>Decision Computation and Language</strong><span class="course-grade">A</span></li>
+                <li><strong>Java Programming</strong><span class="course-grade">92</span></li>
+                <li><strong>Computer Systems</strong><span class="course-grade">84</span></li>
+                <li><strong>Data Structures</strong><span class="course-grade">84</span></li>
+                <li><strong>Artificial Intelligence</strong><span class="course-grade">73</span></li>
+                <li><strong>Introduction to Databases</strong><span class="course-grade">69</span></li>
+                <li><strong>Operating Systems Concepts</strong><span class="course-grade">78</span></li>
+                <li><strong>Discrete Mathematics and Statistics</strong><span class="course-grade">64</span></li>
+                <li><strong>Algorithmic Foundations and Problem Solving</strong><span class="course-grade">73</span></li>
+                <li><strong>Introduction to Networking</strong><span class="course-grade">82</span></li>
+                <li><strong>Software Engineering I</strong><span class="course-grade">67</span></li>
+                <li><strong>Computer Graphics</strong><span class="course-grade">65</span></li>
+                <li><strong>Decision Computation and Language</strong><span class="course-grade">80</span></li>
                 <li><strong>Software Engineering Group Project</strong><span class="course-grade"></span></li>
                 <li><strong>Advanced OO Programming</strong><span class="course-grade"></span></li>
                 <li><strong>Human-Centric Computing</strong><span class="course-grade"></span></li>
                 <li><strong>Complexity of Algorithms</strong><span class="course-grade"></span></li>
-                <li><strong>Linear Algebra</strong><span class="course-grade">A</span></li>
-                <li><strong>Calculus</strong><span class="course-grade">A</span></li>
-                <li><strong>Multivariable Calculus</strong><span class="course-grade">A</span></li>
+                <li><strong>Linear Algebra</strong><span class="course-grade">75</span></li>
+                <li><strong>Calculus</strong><span class="course-grade">83</span></li>
+                <li><strong>Multivariable Calculus</strong><span class="course-grade">70</span></li>
             </ul>
             <div class="gpa">
-                <p><strong>GPA:</strong> Year 1: 3.63, Year 2: 3.82</p>
+                <p><strong>WES GPA:</strong> Year 1: 3.63, Year 2: 3.82</p>
             </div>
             <div class="achievements">
-                <p><strong>Achievements Detail: </strong>  Ranked in the top 1.97% in Java Programming.</p>
+                <p><strong>Note: </strong>  Ranked in the top 1.97% in Java Programming.</p>
+                <p> </strong> XJTLU follows the British marking criteria:  </p>
+                <p> </strong> 70% to 100% &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;First Class </p>
+                <p> </strong> 60% to 69% &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Upper Second Class  </p>
             </div>
         </div>
         <!-- End .education-block -->
