--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
             <div class="achievements">
                 <p><strong>Note: </strong>  Ranked in the top 1.97% in Java Programming.</p>
-                <p> </strong> XJTLU follows the British marking criteria:  </p>
+                <p> </strong> XJTLU follows the British Marking Criteria:  </p>
                 <p> </strong> 70% to 100% &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;First Class </p>
                 <p> </strong> 60% to 69% &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Upper Second Class  </p>
             </div>
