--- a/index.html
+++ b/index.html
@@ -461,6 +461,9 @@
                     <p>
                         Copyright &copy; <span id="current-year">2024</span> Mingyuan Li
                     </p>
+                    <p>                    
+                        Acknowledgments: This project is inspired by and builds upon the work of <a href="https://github.com/RyanFitzgerald/devportfolio" target="_blank">devportfolio                        </a>.
+                    </p>
                 </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
