--- a/index.html
+++ b/index.html
@@ -340,7 +340,9 @@
 
     <div id="education" >
         <h2 class="heading">Course Projects</h2>
-
+        <p><a href="https://github.com/Sushang-Li/UGCourseProjects" target="_blank">
+            Access the detail of all course projects on GitHub
+        </a></p>
         <div class="education-block">
             <h3>Java Programming | Java</h3>
             <h4>Individual Project</h4>
@@ -348,7 +350,6 @@
                 <p>Use of object-oriented techniques, file processing, and data structures to accomplish pathological sequence detection and
                     identification of DNA base sequences of interest.</p>
             </div>
-            <p><a href="https://doi.org/10.1109/PlatCon60102.2023.10255157" target="_blank">Access the code</a></p>
         </div>
 
         <div class="education-block">
