--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Xi’an Jiaotong-Liverpool University</h3>
-            <span class="education-date">September 2021 – Now</span>
+            <span class="education-date">September 2021 – Present</span>
             <h4>Bachelor of Information and Computing Science</h4>
             <ul class="course-list">
                 <li><strong>Java Programming</strong><span class="course-grade">92</span></li>
@@ -208,7 +208,17 @@
                         <img src="images\MCM.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Received the Honourable Mention for MCM/ICM in 2023.</h3>
+                        <h3>Received the Honourable Mention for MCM/ICM in 2023</h3>
+                    </div>
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images\SURF.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                    </div>
+                    <div class="project-info">
+                        <h3>Recognized as a Summer Undergraduate Research Fellow following participation in the program and poster competition</h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -218,7 +228,7 @@
                         <img src="images\CyberC.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Achieved third place in the IEEE CyberC 2023 Data Analysis Competition.</h3>
+                        <h3>Achieved third place in the IEEE CyberC 2023 Data Analysis Competition</h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -228,7 +238,7 @@
                         <img src="images\Sypo.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Awarded second prize at the 2023 XJTLU Student Research-Oriented Learning Summit.</h3>
+                        <h3>Awarded second prize at the 2023 XJTLU Student Research-Oriented Learning Summit</h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -238,7 +248,7 @@
                         <img src="images\advanceHE.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Received the Global Impact Grants 2023-24 (£1000) from Advance HE.</h3>
+                        <h3>Received the Global Impact Grants 2023-24 (£1000) from Advance HE</h3>
                         <p><a href="https://advance-he.ac.uk/membership/member-benefits-2023-24/global-impact-grants-2023-24" target="_blank">Access the the Global Impact Grants 2023-24</a></p>
                     </div>
                 </div>
@@ -249,7 +259,7 @@
                         <img src="images\CPT208.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Honored with an Honorable Mention in the CPT208 Human-Centric Computing.</h3>
+                        <h3>Honored with an Honorable Mention in the CPT208 Human-Centric Computing</h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -259,7 +269,7 @@
                         <img src="images\EdVenture.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Presented project outcomes as a Guest Speaker at EdVenture: Exploring Innovative Practices in Higher Education.</h3>
+                        <h3>Presented project outcomes as a Guest Speaker at EdVenture: Exploring Innovative Practices in Higher Education</h3>
                     </div>
                 </div>
                 <!-- End .project -->
