--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
                         <img src="images\MCM.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Received the Honourable Mention for MCM/ICM in 2023</h3>
+                        <h3>Achieved the <strong>Honourable Mention</strong> for MCM/ICM in 2023</h3>
+                        <h3 style="font-size: medium; font-style: italic;">Top 21%</h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -219,7 +220,7 @@
                         <img src="images\SURF.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Recognized as a Summer Undergraduate Research Fellow following participation in the program and poster competition</h3>
+                        <h3>Recognized as a <strong>Summer Undergraduate Research Fellow</strong> (2023) following participation in the program and poster competition</h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -229,7 +230,8 @@
                         <img src="images\CyberC.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Achieved third place in the IEEE CyberC 2023 Data Analysis Competition</h3>
+                        <h3>Achieved <strong>Third Prize</strong> in the IEEE CyberC 2023 Data Analysis Competition</h3>
+                        <h3 style="font-size: medium; font-style: italic;">Top 3</h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -239,7 +241,8 @@
                         <img src="images\Sypo.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Awarded second prize at the 2023 XJTLU Student Research-Oriented Learning Summit</h3>
+                        <h3>Achieved <strong>Second Prize</strong> at the 2023 XJTLU Student Research-Oriented Learning Summit</h3>
+                        <h3 style="font-size: medium; font-style: italic;">1000 RMB</h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -249,7 +252,8 @@
                         <img src="images\advanceHE.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Received the Global Impact Grants 2023-24 (£1000) from Advance HE</h3>
+                        <h3 style=" margin-bottom: 10px;">Received the <strong>Global Impact Grants 2023-24</strong> (£1000) from Advance HE</h3>
+                        <h3 style="font-size: medium; font-style: italic; margin-top: -5px; margin-bottom: -3px;">Top 15</h3>
                         <p><a href="https://advance-he.ac.uk/membership/member-benefits-2023-24/global-impact-grants-2023-24" target="_blank">Access the the Global Impact Grants 2023-24</a></p>
                     </div>
                 </div>
@@ -260,7 +264,8 @@
                         <img src="images\CPT208.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Honored with an Honorable Mention in the CPT208 Human-Centric Computing</h3>
+                        <h3>Honored with an <strong>Honorable Mention</strong> in the CPT208 Human-Centric Computing</h3>
+                        <h3 style="font-size: medium; font-style: italic;">Top 10%</h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -270,7 +275,7 @@
                         <img src="images\EdVenture.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Presented project outcomes as a Guest Speaker at EdVenture: Exploring Innovative Practices in Higher Education</h3>
+                        <h3>Presented project outcomes as a <strong>Guest Speaker</strong> at EdVenture: Exploring Innovative Practices in Higher Education</h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -290,18 +295,18 @@
                 </p>
                 <!-- 数字标号列表为一级，数字标号列表下有二级列表 -->
                 <ol>
-                    <li><p><strong>Replication and Improvement of the Cervical Spine Fracture Detection Research. Publish a paper at PlatCon.</strong></p></li>
+                    <p><strong>Replication and Improvement of the Cervical Spine Fracture Detection Research. Publish a paper at PlatCon.</strong></p>
                     <ul>
-                        <li>Using multiple pre-processing techniques such as windowing will effectively modify the image size and additionally
+                        <li style="font-size: 15.5px;">Using multiple pre-processing techniques such as windowing will effectively modify the image size and additionally
                             optimize the image contrast and brightness.</li>
-                        <li>Using 3D U-Net + EfficientNet-B5 model for cervical spine segmentation. Then, using CrackNet + BiLSTM Model
+                        <li style="font-size: 15.5px;">Using 3D U-Net + EfficientNet-B5 model for cervical spine segmentation. Then, using CrackNet + BiLSTM Model
                             for Cervical Fracture Classification.</li>
                     </ul>
-                    <li><p><strong>At the HubMAP Competition, use YOLOv8 for human blood vessel segmentation and make pseudo labels for retraining. Trying to combine SAM with YOLOv8 for segmentation.</strong></p></li>
-                    <li><p><strong>During the MedFMC, trained a few-shot model with a Swin-transformer backbone and developing patch-based preprocessing methods to enhance model performance. Publish a paper at CyberC.</strong></p></li>
+                    <!-- <p><strong>At the HubMAP Competition, use YOLOv8 for human blood vessel segmentation and make pseudo labels for retraining. Trying to combine SAM with YOLOv8 for segmentation.</strong></p> -->
+                    <p><strong>During the MedFMC, trained a few-shot model with a Swin-transformer backbone and developing patch-based preprocessing methods to enhance model performance. Publish a paper at CyberC.</strong></p>
                     <ul>
-                        <li>Training a few-shot classification model using the VPT model with a backbone of Swin-transformer.</li>
-                        <li>Developed Patch-based preprocessing technique for the model, enhancing the model’s ability to detect minute details and achieving significant improvements in mAP and AUC on two datasets compared to the baseline.</li>
+                        <li style="font-size: 15.5px;">Training a few-shot classification model using the VPT model with a backbone of Swin-transformer.</li>
+                        <li style="font-size: 15.5px;">Developed Patch-based preprocessing technique for the model, enhancing the model’s ability to detect minute details and achieving significant improvements in mAP and AUC on two datasets compared to the baseline.</li>
                     </ul>
                 </ol>
             </div>
@@ -316,29 +321,29 @@
                     <p>Thomas Selig [Thomas.Selig@xjtlu.edu.cn]</p>
                 </p>
                 <ol>
-                    <li><p><strong> Phase One: Created a programming tutor bot based on open-source projects tailored for pair programming, winning the
-                        second prize at the XJTLU Student Research-Oriented Learning Summit</strong></p></li>
+                    <p><strong> Phase One: Created a programming tutor bot based on open-source projects tailored for pair programming, winning the
+                        second prize at the XJTLU Student Research-Oriented Learning Summit</strong></p>
                     <ul>
-                        <li>Utilized Prompt Engineering to call OpenAI APIs, creating an educational chatbot for programming. Implemented
+                        <li style="font-size: 15.5px;">Utilized Prompt Engineering to call OpenAI APIs, creating an educational chatbot for programming. Implemented
                             Chain of Thought and Moderation to prevent non-educational output, making it suitable for beginners.</li>
-                        <li>Tested the bot with an Indonesian student to verify its effectiveness and multilingual capabilities.</li>
+                        <li style="font-size: 15.5px;">Tested the bot with an Indonesian student to verify its effectiveness and multilingual capabilities.</li>
                     </ul>
-                    <li><p><strong>Phase Two: Developed algorithm visualization module based on bot responses to aid teaching.</strong></p></li>
+                    <p><strong>Phase Two: Developed algorithm visualization module based on bot responses to aid teaching.</strong></p>
                     <ul>
-                        <li>Created seven algorithm visualizations using d3.node, including for loops and array sorting lessons. Modified
+                        <li style="font-size: 15.5px;">Created seven algorithm visualizations using d3.node, including for loops and array sorting lessons. Modified
                             previous React-based TypeScript project to enable response-driven visualizations. Developed a static website with
                             embedded chatbot to package programming knowledge and LLM into courses.</li>
-                        <li>Conducted 2 controlled experiments with pre-A-level students and 2 controlled experiments with 120
+                        <li style="font-size: 15.5px;">Conducted 2 controlled experiments with pre-A-level students and 2 controlled experiments with 120
                             non-programming background students from the CPT206 course at XJTLU, demonstrating improved learning
                             efficiency with the chatbot. Preparing a publication based on these findings and secured Advance HE Global Impact
                             Grants 2023-24.</li>
                     </ul>
-                    <li><p><strong>Phase Three: Further research on the effectiveness of our design compared to standard GPT in teaching graph
-                        algorithms.</strong></p></li>
+                    <p><strong>Phase Three: Further research on the effectiveness of our design compared to standard GPT in teaching graph
+                        algorithms.</strong></p>    
                     <ul>
-                        <li>Iterated three graph algorithm visualizations using d3.force, including DFS-based cycle and connectivity checks, and
+                        <li style="font-size: 15.5px;">Iterated three graph algorithm visualizations using d3.force, including DFS-based cycle and connectivity checks, and
                             BFS-based connected components check. Added data recording and user-friendly guidance modules.</li>
-                        <li>Conducted 8 controlled experiments to verify its effectiveness: experiments involved 330 students with varying
+                        <li style="font-size: 15.5px;">Conducted 8 controlled experiments to verify its effectiveness: experiments involved 330 students with varying
                             programming backgrounds from the CPT204 course at XJTLU. One group used our bot for the set learning tasks,
                             while the other group used AI based on the original GPT. The results showed a significant improvement in learning
                             efficiency for students using the chatbot. The project was showcased at EdVenture and internal sharing seminars.</li>
