--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
         font-family: 'SmileySansOblique', sans-serif;
     }
 
+    #transcriptImage {
+            display: none;
+            margin-top: 20px;
+            width: 100%;
+            max-width: 600px;
+        }
 </style>
 
 </head>
@@ -135,7 +141,7 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Xi’an Jiaotong-Liverpool University</h3>
-            <span class="education-date">September 2021 – Present</span>
+            <span class="education-date">September/2021 – July/2025</span>
             <h4>Bachelor of Information and Computing Science</h4>
             <ul class="course-list">
                 <li><strong>Java Programming</strong><span class="course-grade">92</span></li>
@@ -150,24 +156,27 @@
                 <li><strong>Software Engineering I</strong><span class="course-grade">67</span></li>
                 <li><strong>Computer Graphics</strong><span class="course-grade">65</span></li>
                 <li><strong>Decision Computation and Language</strong><span class="course-grade">80</span></li>
-                <li><strong>Software Engineering Group Project</strong><span class="course-grade"></span></li>
-                <li><strong>Advanced OO Programming</strong><span class="course-grade"></span></li>
-                <li><strong>Human-Centric Computing</strong><span class="course-grade"></span></li>
-                <li><strong>Complexity of Algorithms</strong><span class="course-grade"></span></li>
+                <li><strong>Software Engineering Group Project</strong><span class="course-grade">77</span></li>
+                <li><strong>Advanced OO Programming</strong><span class="course-grade">87</span></li>
+                <li><strong>Human-Centric Computing</strong><span class="course-grade">71</span></li>
+                <li><strong>Complexity of Algorithms</strong><span class="course-grade">57</span></li>
                 <li><strong>Linear Algebra</strong><span class="course-grade">75</span></li>
                 <li><strong>Calculus</strong><span class="course-grade">83</span></li>
                 <li><strong>Multivariable Calculus</strong><span class="course-grade">70</span></li>
             </ul>
             <div class="gpa">
-                <p><strong>WES GPA:</strong> Year 1: 3.63, Year 2: 3.82</p>
+                <p><strong>WES GPA:</strong> 3.77/4.0</p>
+                <p><strong>Major GPA:</strong> 3.82/4.0</p>
                 <p> Ranked in the top 1.97% in Java Programming.</p>
+
+                <p><strong><a href="#" id="transcriptLink">Check the full official transcript and marking criteria</a></strong></p>
+                <img id="transcriptImage" src="images\xjtlu_Transcript.png" alt="Full Official Transcript">
             </div>
-            <div class="achievements">
-                
+            <!-- <div class="achievements">
                 <p><strong>Note: </strong>  </strong> XJTLU follows the British Marking Criteria:  </p>
                 <p> </strong> 70% to 100% &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;First Class </p>
                 <p> </strong> 60% to 69% &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Upper Second Class  </p>
-            </div>
+            </div> -->
         </div>
         <!-- End .education-block -->
     </div>
@@ -287,7 +296,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Research Experience</h2>
         <div id="experience-timeline">
-            <div data-date="June 2023 – September 2023">
+            <div data-date="June/2023 – September/2023">
                 <h3> 2023 Summer Undergraduate Research Fellowship (SURF)</h3>
                 <h4>Research Fellow</h4>
                 <p>
@@ -311,7 +320,7 @@
                 </ol>
             </div>
 
-            <div data-date=" September 2023 – Present">
+            <div data-date=" September/2023 – Present">
                 <h3> TDF Project: AI-based ChatBOT in Programming Education</h3>
                 <h4> Research Assistant</h4>
                 <p>
@@ -524,6 +533,22 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/scripts.min.js"></script>
+
+    <script>
+        var link = document.getElementById("transcriptLink");
+        var image = document.getElementById("transcriptImage");
+    // 确保初始状态下图片是隐藏的
+    image.style.display = "none";
+        // 点击后显示/隐藏图片
+        link.onclick = function(event) {
+            event.preventDefault();  // 防止页面跳转
+            if (image.style.display === "none") {
+                image.style.display = "block";
+            } else {
+                image.style.display = "none";
+            }
+        }
+    </script>
 </body>
 
 </html>
