--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
                         <img src="images\advanceHE.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3 style=" margin-bottom: 10px;">Received the <strong>Global Impact Grants 2023-24</strong> (£1000) from Advance HE</h3>
-                        <h3 style="font-size: medium; font-style: italic; margin-top: -5px; margin-bottom: -3px;">Top 15</h3>
+                        <h3 style=" margin-bottom: 10px;">Received the <strong>Global Impact Grants 2023-24</strong> from Advance HE</h3>
+                        <h3 style="font-size: medium; font-style: italic; margin-top: -5px; margin-bottom: -3px;">Top 15 / £1000</h3>
                         <p><a href="https://advance-he.ac.uk/membership/member-benefits-2023-24/global-impact-grants-2023-24" target="_blank">Access the the Global Impact Grants 2023-24</a></p>
                     </div>
                 </div>
